<?xml version="1.0"?>
<package format="2">
  <name>fetch_control</name>
  <version>1.0.0</version>
  <description>
    Control-only pipeline for Fetch HRI teleoperation experiments.
    Handles joystick input, simulated network delay, admittance smoothing,
    and LIDAR safety — completely decoupled from the camera subsystem.
  </description>

  <maintainer email="you@example.com">Chinmay Amrutkar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS runtime dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- External packages -->
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>fetch_navigation</exec_depend>
  <exec_depend>vrpn_client_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
</package>
